--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huangliang",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,42 +12,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.3",
-    "@angular/cdk": "^5.0.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/http": "^5.1.3",
-    "@angular/material": "^5.0.3",
-    "@angular/platform-browser": "^5.1.3",
-    "@angular/platform-browser-dynamic": "^5.1.3",
-    "@angular/router": "^5.1.3",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/material": "^6.0.3",
+    "@angular/cdk": "^6.4.7",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
+    "core-js": "^2.5.5",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ng2-charts": "^1.6.0",
+    "popper.js": "^1.14.3",
+    "rxjs": "^6.1.0",
+    "zone.js": "~0.8.26",
+    "@tensorflow/tfjs": "^0.13.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.5.2",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.19"
+    "web-animations-js": "^2.3.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/language-service": "^5.1.3",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.96",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "~6.1.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "@types/node": "^9.6.1",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.3",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "1.4.0",
+    "protractor": "5.4.1",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
