--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.1
 environment_variables:
     plaintext:
         S3_BUCKET: "huangliang10987.com"
-        BUILD_ENV: "dev"
+        BUILD_ENV: "production"
 phases:
     install:
         commands:
@@ -12,7 +12,7 @@ phases:
     build:
         commands:
             - echo Build started on `date`
-            - ng build --env=${BUILD_ENV}
+            - ng build --c=${BUILD_ENV}
     post_build:
          commands:
             - aws s3 cp dist s3://${S3_BUCKET} --recursive
